--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "node node_modules/eslint/bin/eslint.js src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,13 @@
   "bugs": {
     "url": "https://github.com/ideia2001/scroller/issues"
   },
-  "homepage": "https://github.com/ideia2001/scroller#readme"
+  "homepage": "https://github.com/ideia2001/scroller#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2"
+  }
 }
